// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table.svelte > cell > should render a cell with a custom class 1`] = `
<div>
  <td
    class="custom-class"
  >
    <cell>
      <!---->
       
      <!---->
      <!---->
       
      <p>
        John Doe
      </p>
      <!---->
      <!---->
    </cell>
  </td>
  
</div>
`;

exports[`Table.svelte > cell > should render content 1`] = `
<div>
  <td>
    <cell>
      <!---->
       
      <!---->
      <!---->
       
      <p>
        John Doe
      </p>
      <!---->
      <!---->
    </cell>
  </td>
  
</div>
`;

exports[`Table.svelte > cell > should render using a formatter 1`] = `
<div>
  <td>
    <cell>
      <!---->
       
      <!---->
      <!---->
       
      <p>
        JOHN DOE
      </p>
      <!---->
      <!---->
    </cell>
  </td>
  
</div>
`;

exports[`Table.svelte > hierarchy > should render a hierarchy child 1`] = `
<div>
  <td>
    <cell>
      <!---->
      <span
        class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
      >
        <!---->
        <!---->
        
        
        <!---->
      </span>
      <!---->
       
      <!---->
      <span
        class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
      >
        <!---->
        <!---->
        
        
        <!---->
      </span>
      
      <!---->
      <!---->
       
      <!---->
      <!---->
      <!---->
      
      
      <!---->
       
      <p>
        John Doe
      </p>
      <!---->
      <!---->
    </cell>
  </td>
  
</div>
`;

exports[`Table.svelte > hierarchy > should render a hierarchy parent 1`] = `
<div>
  <td>
    <cell>
      <!---->
      <!---->
       
      <icon
        aria-label="node-closed"
        class="flex flex-shrink-0 items-center justify-center small cursor-pointer"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="node-closed"
        />
      </icon>
      <!---->
      <!---->
       
      <!---->
      <!---->
      <!---->
      
      
      <!---->
       
      <p>
        John Doe
      </p>
      <!---->
      <!---->
    </cell>
  </td>
  
</div>
`;

exports[`Table.svelte > hierarchy > should render a hierarchy parent expanded 1`] = `
<div>
  <td>
    <cell>
      <!---->
      <!---->
       
      <icon
        aria-label="node-opened"
        class="flex flex-shrink-0 items-center justify-center small cursor-pointer"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="node-opened"
        />
      </icon>
      <!---->
      <!---->
       
      <!---->
      <!---->
      <!---->
      
      
      <!---->
       
      <p>
        John Doe
      </p>
      <!---->
      <!---->
    </cell>
  </td>
  
</div>
`;
